--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<!-- <meta http-equive="refresh" content="0;url=home.html"> -->
-<h5>Welcome!</h5>
-<h5>Liu Weizhi</h5>
-<h5>Huaqiao University</h5>
-<h5>Computer Science and Technology</h5>
-<h5>Generative Speech Steganography</h5>
+<meta http-equive="refresh" content="0;url=home.html">
