--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<meta http-equive="refresh" content="0;url=home.html">
+<!-- <meta http-equive="refresh" content="0;url=home.html"> -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <div id="test">
+            Generative Speech Steganography!
+        </div>
+    </body>
+</html>
